@@ -17,6 +17,7 @@ noinst_PROGRAMS =	\
 	getbug		\
 	header-parsing  \
 	ntlm-test	\
+	redirect-test	\
 	simple-httpd	\
 	simple-proxy	\
 	uri-parsing	\
@@ -38,6 +39,7 @@ header_parsing_SOURCES = header-parsing.c $(TEST_SRCS)
 ntlm_test_SOURCES = ntlm-test.c $(TEST_SRCS)
 proxy_test_SOURCES = proxy-test.c $(TEST_SRCS)
 pull_api_SOURCES = pull-api.c $(TEST_SRCS)
+redirect_test_SOURCES = redirect-test.c $(TEST_SRCS)
 query_test_SOURCES = query-test.c $(TEST_SRCS)
 server_auth_test_SOURCES = server-auth-test.c $(TEST_SRCS)
 simple_httpd_SOURCES = simple-httpd.c
